added models and tested

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="content has-text-centered">
-    <p>
+    <p class="has-text-primary">
       <strong>Hub Gems</strong> by <a href="https://hub.p2pls.com/" target="_">Big Southern Software</a>. The source code is MINE.
        The website content
       is licensed by Lanrna Sayasean MUAHAH.
