--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,14 @@
 
 
  @import "bulma";
+
+
+ /* footer  */
+
+ .footer {
+    position: absolute;
+    bottom: 0;
+    padding: 1rem;
+    width: 100%;
+    background-color: $grey-dark;
+  }
