finished modeling user and added secure password

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,3 +10,7 @@
     </div>
   </div>
 </section>
+
+<div class="has-text-centered">
+    <%= link_to "Check Gems here!", to="#", class: "button is-primary" %>
+</div>
