--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,7 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p class="has-text-primary">
-      <strong>Hub Gems</strong> by <a href="https://hub.p2pls.com/" target="_">Big Southern Software</a>. The source code is MINE.
-       The website content
-      is licensed by Lanrna Sayasean MUAHAH.
+      <strong class="has-text-primary">Hub Gems</strong> by <a href="https://hub.p2pls.com/" target="_" class="has-text-primary">Big Southern Software</a>.
     </p>
   </div>
 </footer>
