--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,5 +12,5 @@
 </section>
 
 <div class="has-text-centered">
-    <%= link_to "Check Gems here!", to="#", class: "button is-primary" %>
+    <%= link_to "Check Gems here!", to="/jewels/new", class: "button is-primary" %>
 </div>
