--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,14 @@
 <nav class="navbar is-dark " role="navigation" aria-label="main navigation">
     <div class="navbar-menu container">
         <div class="navbar-start"> 
-            <img src="https://pbs.twimg.com/profile_images/535452674729078784/5jL6-BA5_400x400.jpeg" 
+            <a href='/'>
+                <img src="https://pbs.twimg.com/profile_images/535452674729078784/5jL6-BA5_400x400.jpeg" 
                  alt="Bulma: Free, open source, & modern CSS framework based on Flexbox" width="112" height="28">
+            </a>
         </div>
     <div class="navbar-end">
             <div class="buttons">
-            <a class="button is-primary">
+            <a href='/users/new' class="button is-primary">
                 <strong>Sign up</strong>
             </a>
             <a class="button is-light">
