added edit functionality and session to store user id

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,3 +43,20 @@ input {
 .forms {
   margin: 0 auto;
 }
+
+.margin-top{
+  margin: 10px 0;
+}
+
+/* search form */
+.search-form{
+  margin: 0 auto;
+}
+
+
+/* favorite */
+
+.fave{
+  display: flex;
+  justify-content: space-between;
+}
