--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,6 +11,7 @@
   </div>
 </section>
 
+
 <div class="has-text-centered">
-    <%= link_to "Check Gems here!", to="/jewels/new", class: "button is-primary" %>
+    <%= link_to "Check Gems here!", to="/jewels/show", class: "button is-primary" %>
 </div>
