--- a/app/views/jewels/new.html.erb
+++ b/app/views/jewels/new.html.erb
@@ -1,5 +1,5 @@
   <div class="columns container forms">
-    <div class="column  field ">
+    <div class="column is-full field ">
       <%= form_for(@jewel, url: add_gem_path) do |f| %>
         <%= f.label :name, :class => 'label'  %>
         <%= f.text_field :name, :class => 'input' %>
@@ -7,7 +7,11 @@
         <%= f.label :desc, "Description", :class => 'label' %>
         <%= f.text_field :desc, :class => 'input' %>
 
+        <%= f.label :tags, "Tags", :class => 'label' %>
+        <%= f.text_field :tags, :class => 'input' %>
+
         <%= f.submit "Add Gem", class: "button is-primary" %>
       <% end %>
+     <%= link_to "Back", to="/jewels/show", class: "button is-primary are-large column is-full" %>
     </div>
   </div>
