--- a/app/views/jewels/show.html.erb
+++ b/app/views/jewels/show.html.erb
@@ -1,4 +1,34 @@
-<div class="section">
-    <h1 class="title"><%= @jewel.name %> </h1> 
-    <h2 class="subtitle"> <%= @jewel.desc %> </h2>
+<table class="table container">   
+<% if logged_in? %>                      
+  <thead>                          
+  <th>Gems</th>
+  <th>Desc</th>
+  <th>Tags</th>
+  <th>Edit</th>
+  <th>Add To Favorite</th>
+  </thead>
+<% @jewel.each do |jewel| %>      
+  <tr>
+    <td><%= jewel.name %></td>  
+    <td><%= jewel.desc %></td>  
+    <td><%= jewel.tags %></td>  
+    <td> <%= link_to "Edit Gems", to="#{jewel.id}/edit", class: "button is-primary " %> </td>
+    <td><%= link_to 'Add To Favorite', favorite_path(user_id: current_user.id, jewel_id: jewel.id), method: :post, class: "button is-primary" %></td>
+
+<% end %>                     
+</table> 
+<div class="container has-text-centered">
+    <%= link_to "Add Gems", to="/jewels/new", class: "button is-primary " %>
+</div>
+<% else %>
+  <p class="has-text-centered title">Please login </p>
+<% end %>
+
+<div class="columns ">
+  <div class="column is-one-fifth search-form">
+    <%= form_tag search_path, method: :get do %>
+      <%= text_field_tag :search, nil,  class: 'input margin-top ', :placeholder => "search by tags here"%>
+      <%= submit_tag "Search" , :class=> 'button is-primary ' %>
+    <% end %>
+  </div>
 </div>
