--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,14 +7,17 @@
             </a>
         </div>
     <div class="navbar-end">
-            <div class="buttons">
-            <a href='/users/new' class="button is-primary">
+        <div class="buttons">
+            <a href='/signup' class="button is-primary">
                 <strong>Sign up</strong>
             </a>
-            <a class="button is-light">
-                Log in
-            </a>
-            </div>
+            <% if logged_in? %>
+                <%= link_to "Log out", logout_path, method: :delete, :class => "button is-light" %>
+            <% else %>
+                <a href='/login'class="button is-light">
+                    Log in
+                </a>
+            <% end %>
         </div>
     </div>
 </nav>
