--- a/app/views/jewels/edit.html.erb
+++ b/app/views/jewels/edit.html.erb
@@ -12,7 +12,7 @@
         <%= f.label :tags, "Tags", :class => 'label' %>
         <%= f.text_field :tags, :class => 'input' %>
 
-        <%= f.submit "Add Gem", class: "button is-primary" %>
+        <%= f.submit "Edit Gem", class: "button is-primary" %>
       <% end %>
     </div>
   </div>
