--- a/app/views/jewels/show.html.erb
+++ b/app/views/jewels/show.html.erb
@@ -14,21 +14,22 @@
     <td><%= jewel.tags %></td>  
     <td> <%= link_to "Edit Gems", to="#{jewel.id}/edit", class: "button is-primary " %> </td>
     <td><%= link_to 'Add To Favorite', favorite_path(user_id: current_user.id, jewel_id: jewel.id), method: :post, class: "button is-primary" %></td>
-
 <% end %>                     
 </table> 
 <div class="container has-text-centered">
     <%= link_to "Add Gems", to="/jewels/new", class: "button is-primary " %>
 </div>
-<% else %>
-  <p class="has-text-centered title">Please login </p>
-<% end %>
 
 <div class="columns ">
   <div class="column is-one-fifth search-form">
     <%= form_tag search_path, method: :get do %>
       <%= text_field_tag :search, nil,  class: 'input margin-top ', :placeholder => "search by tags here"%>
-      <%= submit_tag "Search" , :class=> 'button is-primary ' %>
+      <%= submit_tag "Search" , :class => 'button is-primary ' %>
     <% end %>
   </div>
 </div>
+
+<% else %>
+  <p class="has-text-centered title">Please login/signup </p>
+<% end %>
+
