--- a/app/views/jewels/edit.html.erb
+++ b/app/views/jewels/edit.html.erb
@@ -14,6 +14,7 @@
 
         <%= f.submit "Edit Gem", class: "button is-primary" %>
       <% end %>
+      <%= link_to "Back", to="/jewels/show", class: "button is-primary are-large column is-full" %>
     </div>
   </div>
 <% else %>
