added uniqueness: true to the model favorite to stop users from duplicating their favorite gems

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,9 @@
         </div>
     <div class="navbar-end">
         <div class="buttons">
+            <a href='/my-favorites' class="button is-success">
+                <strong>My Favorites</strong>
+            </a>
             <a href='/signup' class="button is-primary">
                 <strong>Sign up</strong>
             </a>
