--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,6 @@
 
  @import "bulma";
 
-
  /* footer  */
 
  .footer {
@@ -25,6 +24,7 @@
     bottom: 0;
     padding: 1rem;
     width: 100%;
+    margin-top: -10px;
     background-color: $grey-dark;
   }
 
