--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,11 @@
   </head>
 
   <body>
-  <%= render 'layouts/header' %>
-    <%= yield %>
-  <%= render 'layouts/footer' %>
+      <%= render 'layouts/header' %>
+        <% flash.each do |message_type, message| %>
+          <%= content_tag(:div, message, class: "notification is-#{message_type}") %>
+        <% end %>
+        <%= yield %>
   </body>
+  <%= render 'layouts/footer' %>
 </html>
