--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,9 +8,7 @@
         </div>
     <div class="navbar-end">
         <div class="buttons">
-            <a href='/my-favorites' class="button is-success">
-                <strong>My Favorites</strong>
-            </a>
+            <%= link_to "My Favorites", to="/my-favorites", class: "button is-success" %>
             <a href='/signup' class="button is-primary">
                 <strong>Sign up</strong>
             </a>
