--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -8,7 +8,7 @@
 <div class="container has-text-left">
     <% @post.each do |p| %>
         <h2><%= p.content%></h2>
-        <% if current_user && current_user.id === p.user_id %>
+        <% if current_user && current_user.id == p.user_id %>
         <%= link_to "Edit Comment", to="/edit/#{p.id}", class: "button is-primary " %>
         <%= link_to "delete Comment", to="/delete/#{p.id}", method: :delete, class: "button is-danger " %>
         <% end %>
