removed micropost tables, controllers and views along with a create join table that I thought I needed but turned out o be just meh.

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <h2 class="title">Edit Comments Page</h2>
-    <%= form_for(@micropost) do |f| %>
+    <%= form_for(@comments) do |f| %>
         <%= f.label :content, "Comment", :class => 'label' %>
         <%= f.text_field :content, :class => 'input' %>
         <%= f.submit "Edit Comment", class: "button is-primary" %>
