--- a/app/views/jewels/show.html.erb
+++ b/app/views/jewels/show.html.erb
@@ -13,7 +13,7 @@
     <td><%= jewel.name %></td>  
     <td><%= jewel.desc %></td>  
     <td><%= jewel.tags %></td>  
-    <td> <%= link_to "Comments", jewel_microposts_path(jewel) , class: "button is-primary " %> </td>
+    <td> <%= link_to "Comments", jewel_comments_path(jewel) , class: "button is-primary " %> </td>
     <td> <%= link_to "Edit Gems", to="#{jewel.id}/edit", class: "button is-primary " %> </td>
     <td>
       <%= form_with(model: Favorite.create, remote: true) do |f| %>
