added devise and updated application to work

--- a/app/views/jewels/edit.html.erb
+++ b/app/views/jewels/edit.html.erb
@@ -1,4 +1,4 @@
-<% if logged_in? %> 
+<% if current_member? %> 
   <div class="columns container forms">
     <div class="column  field ">
       <h2 class="title">Edit Gems Page</h2>
