--- a/app/views/jewels/show.html.erb
+++ b/app/views/jewels/show.html.erb
@@ -1,5 +1,4 @@
-<table class="table container">   
-<% if logged_in? %>                      
+<table class="table container">                   
   <thead>                          
   <th>Gems</th>
   <th>Desc</th>
@@ -28,15 +27,16 @@
     <%= link_to "Add Gems", to="/jewels/new", class: "button is-primary " %>
 </div>
 
-<div class="columns ">
+<%
+=begin%>
+ <div class="columns ">
   <div class="column is-one-fifth search-form">
     <%= form_tag search_path, method: :get do %>
       <%= text_field_tag :search, nil,  class: 'input margin-top ', :placeholder => "search by TAGS here"%>
       <%= submit_tag "Search" , :class => 'button is-primary ' %>
     <% end %>
-</div>
+</div> 
+<%
+=end%>
 
-<% else %>
-  <p class="has-text-centered title">Please login/signup </p>
-<% end %>
 
