--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,13 +9,13 @@
     <div class="navbar-end">
         <div class="buttons">
             <%= link_to "My Favorites", to="/my-favorites", class: "button is-success" %>
-            <a href='/signup' class="button is-primary">
+            <a href='/users/sign_up' class="button is-primary">
                 <strong>Sign up</strong>
             </a>
-            <% if logged_in? %>
-                <%= link_to "Log out", logout_path, method: :delete, :class => "button is-light" %>
+            <% if current_user %>
+                <%= link_to "Log out", destroy_user_session_path, method: :delete, :class => "button is-light" %>
             <% else %>
-                <a href='/login'class="button is-light">
+                <a href='/users/sign_in'class="button is-light">
                     Log in
                 </a>
             <% end %>
