--- a/app/views/favorites/show.html.erb
+++ b/app/views/favorites/show.html.erb
@@ -7,6 +7,6 @@
             </div>
         </div>
     <% end %> 
-    <%= link_to "Back", to="/jewels/show", class: "button is-primary are-large column is-full" %>
+    <%= link_to "Back", to="/jewels", class: "button is-primary are-large column is-full" %>
 </div>
 
