--- a/app/views/jewels/show.html.erb
+++ b/app/views/jewels/show.html.erb
@@ -13,7 +13,7 @@
     <td><%= jewel.desc %></td>  
     <td><%= jewel.tags %></td>  
     <td> <%= link_to "Comments", jewel_comments_path(jewel) , class: "button is-primary " %> </td>
-    <td> <%= link_to "Edit Gems", to="#{jewel.id}/edit", class: "button is-primary " %> </td>
+    <td> <%= link_to "Edit Gems", to="/jewels/#{jewel.id}/edit", class: "button is-primary " %> </td>
     <td>
       <%= form_with(model: Favorite.create, remote: true) do |f| %>
       <div><%= f.hidden_field :jewel_id, value: jewel.id %></div>
@@ -26,17 +26,5 @@
 <div class="container has-text-centered">
     <%= link_to "Add Gems", to="/jewels/new", class: "button is-primary " %>
 </div>
-
-<%
-=begin%>
- <div class="columns ">
-  <div class="column is-one-fifth search-form">
-    <%= form_tag search_path, method: :get do %>
-      <%= text_field_tag :search, nil,  class: 'input margin-top ', :placeholder => "search by TAGS here"%>
-      <%= submit_tag "Search" , :class => 'button is-primary ' %>
-    <% end %>
-</div> 
-<%
-=end%>
-
+<%= render 'jewels/search' %>
 
