--- a/app/views/jewels/new.html.erb
+++ b/app/views/jewels/new.html.erb
@@ -1,6 +1,6 @@
   <div class="columns container forms">
     <div class="column is-full field ">
-      <%= form_for(@jewel, url: add_gem_path) do |f| %>
+      <%= form_for(@jewels, url: '/jewels') do |f| %>
         <%= f.label :name, :class => 'label'  %>
         <%= f.text_field :name, :class => 'input' %>
 
@@ -12,6 +12,6 @@
 
         <%= f.submit "Add Gem", class: "button is-primary" %>
       <% end %>
-     <%= link_to "Back", to="/jewels/show", class: "button is-primary are-large column is-full" %>
+     <%= link_to "Back", to="/jewels", class: "button is-primary are-large column is-full" %>
     </div>
   </div>
