--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,15 +8,15 @@
         </div>
     <div class="navbar-end">
         <div class="buttons">
-            <%= link_to "My Favorites", to="/my-favorites", class: "button is-success" %>
-            <a href='/users/sign_up' class="button is-primary">
-                <strong>Sign up</strong>
-            </a>
             <% if current_user %>
+                <%= link_to "My Favorites", to="/favorites/#{current_user.id}", class: "button is-success" %>
                 <%= link_to "Log out", destroy_user_session_path, method: :delete, :class => "button is-light" %>
             <% else %>
                 <a href='/users/sign_in'class="button is-light">
                     Log in
+                </a>
+                <a href='/users/sign_up' class="button is-primary">
+                    <strong>Sign up</strong>
                 </a>
             <% end %>
         </div>
