fixed the favorites bug, you can only favorite a gem 1 time instead of multiple times

--- a/app/views/jewels/_search.html.erb
+++ b/app/views/jewels/_search.html.erb
@@ -1,4 +1,4 @@
-<div class="columns ">
+<div class="columns search-tag">
   <div class="column is-one-fifth search-form">
     <%= form_tag(jewels_path, method: :get) do %>
       <%= text_field_tag :partial, params[:partial], placeholder: 'SEARCH BY TAGS', :class => 'input' %>
